@@ -3,7 +3,7 @@
 # generate the file "configure", which is run during Tk installation
 # to configure the system for the local environment.
 #
-# RCS: @(#) $Id: configure.in,v 1.86 2009/02/16 18:14:47 hobbs Exp $
+# RCS: @(#) $Id: configure.in,v 1.87 2009/08/09 21:20:34 nijtmans Exp $
 
 AC_INIT(../generic/tk.h)
 AC_PREREQ(2.59)
@@ -146,6 +146,9 @@ AC_SUBST(MAN2TCLFLAGS)
 AC_CHECK_HEADER([uxtheme.h], [AC_DEFINE(HAVE_UXTHEME_H)],
 	[AC_MSG_NOTICE([xpnative theme will be unavailable])],
 	[#include <windows.h>])
+AC_CHECK_HEADER([vssym32.h], [AC_DEFINE(HAVE_VSSYM32_H)], [],
+	[#include <windows.h>
+#include <uxtheme.h>])
 
 #--------------------------------------------------------------------
 # Set the default compiler switches based on the --enable-symbols 
