@@ -1,3 +1,13 @@
+2009-08-09  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* generic/ttk/ttkInit.c Eliminate gcc warning
+	* generic/tkBind.c
+	* generic/tkText.c
+	* generic/tkUtil.c
+	* win/ttkWinXPTheme.c:  include <vssym32.h> only when available
+	* win/configure.in:     check for vssym32.h, available in newer SDK's
+	* win/configure         (regenerated)
+
 2009-08-08  Donal K. Fellows  <dkf@users.sf.net>
 
 	* library/demos/pendulum.tcl: Make the display handle being resized
